[gd_scene load_steps=3 format=3 uid="uid://iecw0xkvtuvb"]

[ext_resource type="Script" path="res://src/game/scripts/components/hitbox_component.gd" id="1_ci0wd"]
[ext_resource type="Script" path="res://src/game/enemies/weapons/base/base_melee_enemy_weapon.gd" id="1_y0u1d"]

[node name="BaseMeleeEnemyWeapon" type="Sprite2D"]
script = ExtResource("1_y0u1d")

[node name="HandSprite" type="Sprite2D" parent="."]

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_ci0wd")

[node name="AttackRate" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
